[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chromhandler"
version = "0.10.2"
description = "Tool for processing chromatography data"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "haeussma", email = "83341109+haeussma@users.noreply.github.com" }]
requires-python = ">=3.10"

dependencies = [
  "numpy>=2.1.0",
  "calipytion>=1.0.2,<2.0.0",
  "pyenzyme>=2.1.0,<3.0.0",
  "pydantic>=2,<3",
  "rich>=13.7,<15",
  "loguru>=0.7,<1",
]

[project.urls]
Homepage = "https://github.com/haeussma/chromhandler"

[dependency-groups]
dev = [
  "pydantic[mypy]>=2,<3",
  "ruff>=0.6,<1",
  "pytest>=8.0.2",
  "devtools>=0.12.2",
  "mkdocs-material>=9.6.16",
  "mkdocstrings[python]>=0.30.0",
  "nbval>=0.11.0",
  "mkdocs-jupyter>=0.25.1",
]

[tool.pydantic.mypy]
init_typed = true

[tool.pytest.ini_options]
markers = [
  "readers: marks tests as slow (deselect with '-m \"not slow\"')",
  "core: marks tests as core (deselect with '-m \"not core\"')",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
line_length = 120
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
check_untyped_defs = true
strict = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["chromhandler", "chromatopy"]  # 'chromatopy' shim

[tool.hatch.build]
exclude = ["tests", "docs", "mkdocs.yml", ".github"]